--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>demo</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>8</java.version>
+		<java.version>11</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -59,6 +59,20 @@
             <artifactId>validation-api</artifactId>
             <version>2.0.1.Final</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>2.17.1</version>
+            <scope>test</scope>
+        </dependency>
+<!--          --><!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-core -->
+<!--         <dependency> -->
+<!--             <groupId>org.flywaydb</groupId> -->
+<!--             <artifactId>flyway-core</artifactId> -->
+<!--             <version>8.5.8</version> -->
+<!--         </dependency> -->
+
 	</dependencies>
 
 	<build>
